# advent

./: .editorconfig  README.md
2019/: README.md  mix.exs
2019/lib/amplifier/: aggregator.ex  amplifier.ex  configuration.ex  supervisor.ex  worker.ex
2019/lib/constants/: constants.ex
2019/lib/day2/: day2.ex
2019/lib/day3/: day3.ex
2019/lib/day5/: day5.ex
2019/lib/day6/: day6.ex
2019/lib/day7/: day7.ex
2019/lib/fuel_mass/: calculator.ex
2019/lib/helpers/: list.ex
2019/lib/intcode/: constants.ex  execution_context.ex  fixer.ex  intcode.ex  op_codes.ex  processor.ex  program.ex
2019/lib/trajectory/: graph.ex  node.ex  orbit_map.ex  trajectory.ex
2019/test/: day1_test.exs  day2_test.exs  day3_test.exs  day4_test.exs  day5_test.exs  day6_test.exs  day7_test.exs
2020/: notes.md
2020/01/: main.rs
2020/02/: Cargo.toml  main.rs
2020/03/: main.rs
2020/04/: main.rs  sample-input-valid.txt
2020/day-7/: Cargo.toml
2021/: Cargo.toml
2021/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2022/: Cargo.toml  README.md  justfile
2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  dayn.rs.tmpl  main.rs
2023/: .gitattributes  .gitignore  README.md  aoc.opam  dune-project  esy.json  package-lock.json  package.json
2023/esy.lock/: index.json
2023/lib/: day.re  day1.md  day1.re  day2.md  day2.re  day2.rei  day3.md  day3.re  day4.md  day4.re  day_template.re  dune  import.re  utils.re
(+32 files in other folders)
